// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should create an aggregate field 1`] = `
Object {
  "as": "j",
  "functionName": "row_to_json",
  "name": Object {
    "name": "alias_name",
    "scope": undefined,
    "type": "Identifier",
  },
  "type": "UnaryFunction",
}
`;

exports[`should create an aggregate field with scoped column 1`] = `
Object {
  "as": "j",
  "functionName": "row_to_json",
  "name": Object {
    "name": "alias_name",
    "scope": "table",
    "type": "Identifier",
  },
  "type": "UnaryFunction",
}
`;
